--- a/projects/cli/package.json
+++ b/projects/cli/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "bun build core/main.ts --outfile bin/bible --compile && cp bin/bible node_modules/.bin/bible"
+    "build": "bun build core/main.ts --outfile bin/bible --compile && cp bin/bible node_modules/.bin/bible",
+    "typecheck": "tsc --noEmit"
   },
   "bin": {
     "bible": "bin/bible"
