--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     ],
     "catalog": {
       "@effect/cli": "0.72.1",
+      "@effect/language-service": "0.64.0",
       "@effect/platform": "0.93.0",
       "@effect/platform-bun": "0.83.0",
       "@types/bun": "1.3.2",
@@ -19,13 +20,17 @@
     }
   },
   "scripts": {
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\""
+    "build": "bun --filter '*' build",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "typecheck": "bun --filter '*' typecheck"
   },
   "devDependencies": {
     "@cvr/config": "^0.5.2",
+    "@effect/language-service": "^0.64.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "prettier": "^3.7.4",
-    "prettier-plugin-tailwindcss": "^0.7.2"
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "typescript": "^5.9.3"
   },
   "prettier": "@cvr/config/prettier"
 }
