--- a/projects/cli/tsconfig.json
+++ b/projects/cli/tsconfig.json
@@ -23,6 +23,10 @@
       "~/*": ["./*"]
     },
 
+    /* JSX for OpenTUI React */
+    "jsx": "react-jsx",
+    "jsxImportSource": "@opentui/react",
+
     /* If NOT transpiling with TypeScript: */
     "module": "Preserve",
     "noEmit": true,
@@ -35,5 +39,5 @@
       }
     ]
   },
-  "include": ["core/**/*.ts", "lib/**/*.ts"]
+  "include": ["core/**/*.ts", "lib/**/*.ts", "src/**/*.ts", "src/**/*.tsx"]
 }
