--- a/projects/web/package.json
+++ b/projects/web/package.json
@@ -10,8 +10,9 @@
     "upload-egw": "bun run upload-egw.ts"
   },
   "dependencies": {
+    "@bible/core": "workspace:*",
     "@base-ui-components/react": "^1.0.0-beta.6",
-    "@effect/platform": "^0.94.1",
+    "@effect/platform": "catalog:",
     "@effect/platform-bun": "^0.87.0",
     "@google/genai": "^1.34.0",
     "@react-router/node": "^7.11.0",
