--- a/projects/web/package.json
+++ b/projects/web/package.json
@@ -10,8 +10,8 @@
     "upload-egw": "bun run upload-egw.ts"
   },
   "dependencies": {
-    "@bible/core": "workspace:*",
     "@base-ui-components/react": "^1.0.0-beta.6",
+    "@bible/core": "workspace:*",
     "@effect/platform": "catalog:",
     "@effect/platform-bun": "^0.87.0",
     "@google/genai": "^1.34.0",
@@ -23,7 +23,8 @@
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-router": "^7.11.0"
+    "react-router": "^7.11.0",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.11.0",
