feat: integrate structural analysis across CLI, core, and TUI
- Phase 1: Enrich study generation prompt with structural analysis methods
  (chiastic detection, word studies, typological mapping, symbolism decoding)
- Phase 2: Add `bible analyze <passage>` CLI command with shallow/deep modes
- Phase 3: StructuralAnalysis core service (deterministic data orchestration)
- Phase 4: Add [Struct] tab to TUI cross-refs popup with word frequency and
  Strong's data
- Add AI tool calling: study generator can now invoke Strong's lookups, verse
  words, cross-refs, and margin notes during generation via AI SDK v6 tools
- Add StructuralAnalysis service tests (12 tests, 332 expects)

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,7 +22,8 @@
     "./types": "./src/types/index.ts",
     "./bible-service": "./src/bible-service/index.ts",
     "./egw-service": "./src/egw-service/index.ts",
-    "./hymnal": "./src/hymnal/index.ts"
+    "./hymnal": "./src/hymnal/index.ts",
+    "./structural-analysis": "./src/structural-analysis/index.ts"
   },
   "scripts": {
     "prepare": "effect-language-service patch",
