chore: gitignore generated database files
These are rebuilt from JSON assets via sync scripts and don't
belong in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,6 @@ bin/
 
 # API tokens
 packages/core/data/tokens.json
+
+# Generated databases (rebuilt via sync scripts from JSON assets)
+packages/core/data/*.db
