--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,7 +22,8 @@
     "@kobalte/core": "^0.13.11",
     "@solidjs/router": "^0.15.4",
     "effect": "catalog:",
-    "solid-js": "^1.9.11"
+    "solid-js": "^1.9.11",
+    "wa-sqlite": "https://github.com/rhashimoto/wa-sqlite.git"
   },
   "devDependencies": {
     "@effect/language-service": "catalog:",
