--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bible/web",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "dev": "concurrently \"bun run server:dev\" \"bun run vite:dev\"",
@@ -15,25 +15,48 @@
     "test:e2e:headed": "playwright test --headed"
   },
   "dependencies": {
+    "@base-ui/react": "^1.2.0",
     "@bible/api": "workspace:*",
     "@bible/core": "workspace:*",
     "@effect/platform": "catalog:",
     "@effect/platform-bun": "catalog:",
-    "@kobalte/core": "^0.13.11",
-    "@solidjs/router": "^0.15.4",
+    "@hookform/resolvers": "^5.2.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "effect": "catalog:",
-    "solid-js": "^1.9.11",
-    "wa-sqlite": "https://github.com/rhashimoto/wa-sqlite.git"
+    "embla-carousel-react": "^8.6.0",
+    "input-otp": "^1.4.2",
+    "lucide-react": "^0.563.0",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.0",
+    "react-day-picker": "^9.13.2",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.71.1",
+    "react-resizable-panels": "^4.6.2",
+    "react-router": "^7.6.1",
+    "recharts": "2.15.4",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "vaul": "^1.1.2",
+    "wa-sqlite": "https://github.com/rhashimoto/wa-sqlite.git",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@effect/language-service": "catalog:",
     "@playwright/test": "^1.58.1",
     "@tailwindcss/vite": "^4.1.18",
     "@types/bun": "catalog:",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.5.2",
+    "babel-plugin-react-compiler": "latest",
     "concurrently": "^9.2.1",
+    "shadcn": "^3.8.4",
     "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
     "typescript": "catalog:",
-    "vite": "^7.3.1",
-    "vite-plugin-solid": "^2.11.10"
+    "vite": "^7.3.1"
   }
 }
