--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,10 +2,12 @@ pre-commit:
   parallel: true
   jobs:
     - name: fmt
-      run: bun run fmt
+      glob: "*.{ts,tsx,js,jsx,json,css,html,md}"
+      run: oxfmt --write {staged_files}
       stage_fixed: true
     - name: lint
-      run: bun run lint:fix
+      glob: "*.{ts,tsx,js,jsx}"
+      run: oxlint --fix {staged_files}
       stage_fixed: true
     - name: typecheck
       run: bun run typecheck
