--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -40,7 +40,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
-    "wa-sqlite": "https://github.com/rhashimoto/wa-sqlite.git",
+    "wa-sqlite": "https://github.com/cevr/wa-sqlite.git",
     "zod": "^4.3.6"
   },
   "devDependencies": {
